Fixed dark mode styling

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 /* ----------------------------------- GLOBAL ----------------------------------- */
-/* ----------------------------------- GLOBAL ----------------------------------- */
 body { background-color: white; color: black; }
 main { margin-top: 55px; padding-top: 2em; }
 .clear { clear: both; }
@@ -30,8 +29,8 @@ h4.usage-key { color: black!important;  margin-top: 10px; }
 #setStateMenu .db-buttons div { width: 100%; margin: 1em 0.5em 0.5em 0.5em; }
 #setStateMenu .db-buttons a { width: 100%; }
 
-/* Dark mode light mode toggle from https://codepen.io/fydsa/pen/abwdpep*/
-:root { --light: #d8dbe0; --dark: #39393f; }
+/* Dark mode light mode toggle from https://codepen.io/fydsa/pen/abwdpep */
+:root { --light: #d8dbe0; --dark: #39393f; --darksecondary: #4f4f4f; }
 .toggle-switch { position: fixed; width: 50px; display: flex; align-items: center; right: 4.5em; }
 .toggle-switch label { position: absolute; width: 100%; height: 25px; background-color: var(--dark); border-color: var(--light); border-radius: 12px; cursor: pointer; }
 .toggle-switch input { position: absolute; display: none; }
@@ -160,6 +159,7 @@ table.evo-table input { height: 16px; width: 16px; margin-left: -2.5rem!importan
 .dark-mode .list-view-table { color: white; }
 
 .dark-mode .modal-content { background-color: var(--dark); }
+.dark-mode #setStateMenu .modal-footer { background-color: var(--darksecondary); }
 .dark-mode .shout-out { background-color: #2e2e2e; }
 
 /* ------------------------------- MEDIA QUERIES -------------------------------- */
